<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TabHost android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TabWidget android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@android:id/tabs"
                android:background="#ffff8100" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView" >

                <FrameLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@android:id/tabcontent" >

                    <LinearLayout android:id="@+id/tab1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="151dp"
                            android:id="@+id/imageView"
                            android:src="@drawable/logo_comandapp"
                            android:layout_marginTop="10dp" />

                        <TextView android:id="@+id/textView1"
                            android:text="@string/Nombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:textSize="20sp"
                            android:layout_marginLeft="24dp" />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="2dp"/>
                        <TextView android:id="@+id/textView2"
                            android:text="@string/Telefono"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:textSize="20sp"
                            android:layout_marginLeft="24dp" />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="2dp"/>
                        <TextView android:id="@+id/textView3"
                            android:text="@string/Direccion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:textSize="20sp"
                            android:layout_marginLeft="24dp" />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="2dp"/>
                        <TextView android:id="@+id/textView4"
                            android:text="@string/Provincia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:textSize="20sp"
                            android:layout_marginLeft="24dp" />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="2dp"/>
                        <TextView android:id="@+id/textView5"
                            android:text="@string/Municipio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:textSize="20sp"
                            android:layout_marginLeft="24dp" />
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="2dp"/>
                        <TextView android:id="@+id/textView6"
                            android:text="@string/Correo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:textSize="20sp"
                            android:layout_marginLeft="24dp" />
                        <Button
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="Ver en mapa"
                            android:id="@+id/button"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            style="@style/botonCustom"
                            android:layout_marginBottom="20dp" />
                    </LinearLayout>

                    <LinearLayout android:id="@+id/tab2"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                    </LinearLayout>
                    <LinearLayout android:id="@+id/tab3"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                    </LinearLayout>
                </FrameLayout>
            </ScrollView>

        </LinearLayout>
    </TabHost>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView"
        android:layout_gravity="right" />
</LinearLayout>